Add non-root user to run time container